--- a/TimerManager/TimerManager.vcxproj.filters
+++ b/TimerManager/TimerManager.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="src\TimerManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\TimerObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\TimerManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TimerObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
