--- a/TimerManager/TimerManager.vcxproj
+++ b/TimerManager/TimerManager.vcxproj
@@ -141,9 +141,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\TimerManager.cpp" />
+    <ClCompile Include="src\TimerObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\TimerManager.h" />
+    <ClInclude Include="src\TimerObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
